Fixed about-page on mobile, css

--- a/BouvetGrandPrixAngular/app/about/about.component.css
+++ b/BouvetGrandPrixAngular/app/about/about.component.css
@@ -108,7 +108,7 @@
 }
 
 #see_map_button{
-    margin: 36px 0px 48px 0px;
+    margin: 36px 0px 18px 0px;
 }
 
 .strek{
@@ -144,6 +144,21 @@
     padding-top:30px;
 }
 
+@media (max-width: 768px) {
+    #about_moving_text{
+        text-align:center;
+    }
+
+    #see_map_button_div{
+        width:100%;
+    }
+
+    #see_map_button{
+        width:100%;
+        text-align:center;
+    }
+}
+
 @media only screen and (min-width: 768px) {
 
     #about_page .top-text {
@@ -158,9 +173,10 @@
         padding-left:40px;
     }
     #about_page .text-block{
-
         display: block;
     }
+    
+
     #go_to_front_page_button_div{
         text-align:right;
         width: 50%;
@@ -170,6 +186,11 @@
         text-align:left;
         width:50%;
     }
+
+    
+
+
+
     #about_page .heading-text{
         font-size: 80px;
         letter-spacing: 0.02em;
